[package]
name = "clay"
version = "0.1.0"
authors = ["Rishi Kothari <itsrishikothari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "claylang"
path = "src/lib.rs"

[[bin]]
name = "clay"
path = "src/main.rs"

[dependencies]
colored = "2"